# subtitle-syncer

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
app/: main.py  services.py
app/templates/: base.html  error.html  index.html  processing.html  result.html
tests/: conftest.py  test_app.py  test_integration_pipeline.py  test_services.py
tests/data/: sample.srt  sample_mp4_base64.txt
