[project]
name = "subtitle-syncer"
version = "0.1.0"
description = "Web application that synchronizes subtitles using ffsubsync, pysubs2, and uchardet."
authors = [{ name = "Subtitle Syncer Maintainers" }]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110,<0.115",
    "uvicorn[standard]>=0.27,<0.30",
    "jinja2>=3.1,<4",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "coverage[toml]>=7.4",
    "httpx>=0.27",
    "pytest>=8.0",
    "ruff>=0.5.0",
]

[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["app"]
exclude = ["tests", "tests.*", "py312", "py312.*"]

[tool.setuptools.package-data]
app = [
    "templates/*.html",
    "templates/**/*.html",
    "static/*",
    "static/**/*",
]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["app"]

[tool.coverage.report]
show_missing = true

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "W"]

